# MusicBird

./: .gitignore  .pre-commit-config.yaml  .pylintrc  .python-version  .readthedocs.yml  CHANGELOG.md  MANIFEST.in  README.rst  pyproject.toml  pytest.ini  setup.cfg  tox.ini
.chglog/: config.yml
.github/workflows/: ci.yml  create-release.yml
docs/: Makefile
docs/source/: concepts.rst  conf.py  config.rst  contributing.rst  index.rst  install.rst  modules.rst  musicbird.rst  quickstart.rst  systemd.rst  usage.rst
docs/source/files/: musicbird-runner.service  musicbird-runner.timer
scripts/: setup.sh
src/musicbird/: __init__.py  __main__.py  config.py  copy.py  db.py  encode.py  encoder.py  file.py  prune.py  run.py  scan.py  scanner.py
src/musicbird/data/: default_config.yml
tests/: conftest.py
tests/integration/: test_copy.py  test_encode.py  test_prune.py  test_run.py  test_scan.py
tests/unit/: test_cli.py  test_config.py  test_db_sqlite3.py  test_encoder.py  test_file.py  test_scanner.py
