[tool.poetry]
name = "MusicBird"
version = "0.1.8"
description = "Convert your music library on-the-fly!"
readme = "README.rst"
license = "GPL-3.0-or-later"
keywords = ["musicbird", "media", "conversion", "ffmpeg"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Topic :: Multimedia :: Sound/Audio :: Conversion",
]
authors = ["Max Hösel <musicbird@maxhoesel.de>"]
repository = "https://github.com/maxhoesel/musicbird"
packages = [
    { include = "musicbird", from = "src"},
]


[tool.poetry.dependencies]
python = ">=3.6.2,<3.10"
schema = "^0.7.5"
ffmpeg-python = "^0.2.0"
PyYAML = "^6.0"
importlib-metadata = { version = "^1.0", python = "<3.8" }
Sphinx = {version = "^4.3.2", optional = true}
sphinx-rtd-theme = {version = "^1.0.0", optional = true}
sphinxcontrib-napoleon = {version = "^0.7", optional = true}

[tool.poetry.dev-dependencies]
gitlint = "^0.17.0"
pylint = "^2.12.2"
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
pytest-xdist = {extras = ["psutil"], version = "^2.5.0"}
pre-commit = "^2.16.0"
autopep8 = "^1.6.0"

[tool.poetry.extras]
docs = [
    "Sphinx",
    "sphinx-rtd-theme",
    "sphinxcontrib-napoleon",
]

[tool.poetry.scripts]
musicbird = 'musicbird.__main__:entrypoint'



[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"




[tool.pytest.ini_options]
addopts="-nauto --basetemp=.pytest_tmp --cov=musicbird --cov-report=html --cov-report=term --cov-report=xml"

[tool.autopep8]
max_line_length = 120

# Pylint settings
[tool.pylint.'NESSAGES CONTROL']
disable=[
    "logging-fstring-interpolation", # See https://github.com/PyCQA/pylint/issues/2354
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring", # also triggers on abstract functions
    "consider-using-enumerate", # not for simple loops
    "consider-using-dict-items",
    "no-else-return",
    "invalid-name",
    "too-many-boolean-expressions",
    "too-few-public-methods",
    "I"
]
[tool.pylint.'FORMAT']
max-line-length=120
