[metadata]
name = musicbird
version = attr: musicbird.__version__
description = Convert your music library on-the-fly!
long_description = file: README.rst
license_file = LICENSE
keywords = musicbird, media, conversion, ffmpeg
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3 :: Only
    Topic :: Multimedia :: Sound/Audio :: Conversion
author = Max Hösel
author_email = "musicbird@maxhoesel.de"
url = https://github.com/maxhoesel/musicbird

[options]
zip_safe = False
include_package_data = True
package_dir =
    =src
packages = find:
install_requires =
    schema
    ffmpeg-python
    pyyaml
python_requires = >=3.6

[options.extras_require]
dev =
    pylint
    pytest
    pytest-cov
    pytest-xdist[psutil]

[options.entry_points]
console_scripts =
    musicbird = musicbird.__main__:entrypoint

[options.packages.find]
where = src
include =
    musicbird
    musicbird.*

[pep8]
max-line-length = 120
